config/prometheus/ingress-prometheus.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
  labels:
    app: prometheus-k8s
  name: prometheus-k8s
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.localho.st
      http:
        paths:
          - backend:
              service:
                name: prometheus-k8s
                port:
                  name: web
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - prometheus.localho.st
